rename classification IDs for profkat
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@30962 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -23,8 +23,8 @@ MCR.IndexBrowser.profkat.Datafields=profkat_period,profkat_last_professorship,pr
 # OAI Data Provider
 ##########################################
 MCR.OAIDataProvider.OAI2.Search.Restriction=objectType:person
-MCR.OAIDataProvider.OAI2.Sets.bkl=xslStyle:classification2sets:classification:metadata:1:children:cpr_class_cprbkl
-MCR.OAIDataProvider.OAI2.MapSetToClassification.bkl=cpr_class_cprbkl
+MCR.OAIDataProvider.OAI2.Sets.bkl=xslStyle:classification2sets:classification:metadata:1:children:profkat_class_subjects
+MCR.OAIDataProvider.OAI2.MapSetToClassification.bkl=profkat_class_subjects
 MCR.OAIDataProvider.OAI2.Sets.objectType=webapp:oai/set_objectType.xml
 MCR.OAIDataProvider.OAI2.MapSetToQuery.test=objectType:person
 MCR.OAIDataProvider.OAI2.MapSetToQuery.objectType_person=objectType:person
@@ -38,17 +38,17 @@ MCR.AccessRuleEditor.defaultrules.registeredUser=<condition format\="xml"><boole
 
 MCR.Application.ExternalUserLogin.Class=
 
-MCR.URIResolver.Classification.Sort.cpr_class_cprbkl=false
-MCR.URIResolver.Classification.Sort.cpr_class_adminfunctions=false
-MCR.URIResolver.Classification.Sort.cpr_class_degree=false
-MCR.URIResolver.Classification.Sort.cpr_class_professortypes=false
-MCR.URIResolver.Classification.Sort.cpr_class_histfak=false
+MCR.URIResolver.Classification.Sort.profkat_class_cprbkl=false
+MCR.URIResolver.Classification.Sort.profkat_class_adminfunctions=false
+MCR.URIResolver.Classification.Sort.profkat_class_degree=false
+MCR.URIResolver.Classification.Sort.profkat_class_professortypes=false
+MCR.URIResolver.Classification.Sort.profkat_class_institutions=false
 
-MCR.Class.SearchField.cpr_class_cprbkl=class_bkl
-MCR.Class.SearchField.cpr_class_adminfunctions=class_admin
-#MCR.Class.SearchField.cpr_class_degree=cpr_degree #if disabled no search-link in detailview will be displayed
-MCR.Class.SearchField.cpr_class_professortypes=class_proftypes
-MCR.Class.SearchField.cpr_class_histfak=class_fac
+MCR.Class.SearchField.profkat_class_subjects=class_bkl
+MCR.Class.SearchField.profkat_class_adminfunctions=class_admin
+#MCR.Class.SearchField.profkat_class_degree=cpr_degree #if disabled no search-link in detailview will be displayed
+MCR.Class.SearchField.profkat_class_professortypes=class_proftypes
+MCR.Class.SearchField.profkat_class_institutions=class_fac
 
 MCR.WorkflowEngine.Administrator.Email=profkatadmin@beispiel-uni.de
 MCR.WorkflowEngine.EditDirectory.person=%MCR.datadir%/export/person
