--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -92,13 +92,29 @@ log4j.logger.org.mycore.datamodel.classifications=ERROR, stdout, R
 MCR.Metadata.Type.person=true
 MCR.Metadata.Config.person=datamodel-person.xml
 
+
+##############################################################################
+# SOLR                                                                       #
+##############################################################################
+
+MCR.Module-solr.UpdatePath=/update
+##############################################################################
+# URIResolver & ContentTransformer                                           #
+##############################################################################
+MCR.ContentTransformer.mycoreobject-solrdocument.Stylesheet=xsl/profkat-solrbase.xsl
+MCR.URIResolver.xslImports.solr-document=%MCR.URIResolver.xslImports.solr-document%,profkat-solr.xsl
+
+
 ##############################################################################
 #
 # Workflow User / Group Assignment
 #
 ##############################################################################
-MCR.Activiti.TaskAssignment.CandidateGroups.create_object_simple.cpr_person=editprofessorum
+MCR.Activiti.TaskAssignment.CandidateGroups.create_object_simple.profkat_person=editprofessorum
+MCR.Activiti.TaskAssignment.CandidateUsers.edit_object.profkat_person=administrator
 MCR.Activiti.WorkflowMgr.class.create_object_simple.default_person=org.mycore.activiti.workflows.create_object_simple.person.MCRWorkflowMgrPerson
+
+
 
 ##############################################################################
 # Startlink
