--- a/profkat-base-module/pom.xml
+++ b/profkat-base-module/pom.xml
@@ -167,7 +167,6 @@
 				<artifactId>xml-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<phase>generate-resources</phase>
 						<goals>
 							<goal>transform</goal>
 						</goals>
@@ -177,17 +176,23 @@
 					<transformationSets>
 						<transformationSet>
 							<dir>src/main/config/datamodel</dir>
-							<outputDir>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDir>
-							<stylesheet>./../jspdocportal-module/src/main/resources/xsl/MCRMetadataSchema.xsl</stylesheet>
+							<outputDir>target/classes</outputDir>
+							<stylesheet>xsl/MCRMetadataSchema.xsl</stylesheet>
 							<fileMappers>
-								<fileMapper
-									implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
+								<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
 									<targetExtension>.xsd</targetExtension>
 								</fileMapper>
 							</fileMappers>
 						</transformationSet>
 					</transformationSets>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.mycore</groupId>
+						<artifactId>mycore-base</artifactId>
+						<version>${project.version}</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 
