--- a/profkat-base-module/pom.xml
+++ b/profkat-base-module/pom.xml
@@ -10,6 +10,9 @@
 	<packaging>jar</packaging>
 	<name>Professorenkatalog Base</name>
 	<description>generic code for professorenkatalog</description>
+	<properties>
+    	<forbiddenapis.skip>true</forbiddenapis.skip>
+  	</properties>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>MyCoRe HQ</id>
@@ -64,9 +67,6 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
-
-
 		<dependency>
 			<groupId>org.mycore</groupId>
 			<artifactId>mycore-user2</artifactId>
@@ -124,7 +124,6 @@
 					<exclude>*.template</exclude>
 					<exclude>datamodel-*.xml</exclude>
 				</excludes>
-
 			</resource>
 			<resource>
 				<directory>src/main/resources/config/lang/webcontent</directory>
@@ -163,6 +162,31 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.mycore</groupId>
+									<artifactId>mycore-base</artifactId>
+									<version>${project.version}</version>
+									<includes>xsl/MCRMetadata*.xsl</includes>
+									<overWrite>false</overWrite>
+									<outputDirectory>${project.build.outputDirectory}</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>xml-maven-plugin</artifactId>
 				<executions>
@@ -176,8 +200,8 @@
 					<transformationSets>
 						<transformationSet>
 							<dir>src/main/config/datamodel</dir>
-							<outputDir>target/classes</outputDir>
-							<stylesheet>xsl/MCRMetadataSchema.xsl</stylesheet>
+							<outputDir>${project.build.outputDirectory}</outputDir>
+							<stylesheet>${project.build.outputDirectory}/xsl/MCRMetadataSchema.xsl</stylesheet>
 							<fileMappers>
 								<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
 									<targetExtension>.xsd</targetExtension>
@@ -186,13 +210,6 @@
 						</transformationSet>
 					</transformationSets>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.mycore</groupId>
-						<artifactId>mycore-base</artifactId>
-						<version>${project.version}</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 		</plugins>
 
@@ -210,22 +227,21 @@
 							<pluginExecutions>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.codehaus.mojo
-										</groupId>
-										<artifactId>
-											xml-maven-plugin
-										</artifactId>
-										<versionRange>
-											[1.0,)
-										</versionRange>
-										<goals>
-											<goal>transform</goal>
-										</goals>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>xml-maven-plugin</artifactId>
+										<versionRange>[1.0,)</versionRange>
+										<goals><goal>unpack</goal></goals>
 									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
+									<action><ignore></ignore></action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-dependency-plugin</artifactId>
+										<versionRange>[2.8,)</versionRange>
+										<goals><goal>unpack</goal></goals>
+									</pluginExecutionFilter>
+									<action><ignore></ignore></action>
 								</pluginExecution>
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
