unified jsp tags isLocked and hasAccess
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31051 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -112,7 +112,7 @@ MCR.URIResolver.xslImports.solr-document=%MCR.URIResolver.xslImports.solr-docume
 ##############################################################################
 MCR.Activiti.TaskAssignment.CandidateGroups.create_object_simple.profkat_person=editprofessorum
 MCR.Activiti.TaskAssignment.CandidateUsers.edit_object.profkat_person=administrator
-MCR.Activiti.WorkflowMgr.class.create_object_simple.default_person=org.mycore.activiti.workflows.create_object_simple.person.MCRWorkflowMgrPerson
+MCR.Activiti.WorkflowMgr.Class.create_object_simple.default_person=org.mycore.activiti.workflows.create_object_simple.person.MCRWorkflowMgrPerson
 
 
 
