reimplemented feedback form
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31056 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/src/main/config/mycore.properties
+++ b/profkat-sample-webapp/src/main/config/mycore.properties
@@ -27,7 +27,15 @@ MCR.NameOfProject=ProfKat
 #Project-ID (first part in MyCoRe Object ID)
 MCR.SWF.Project.ID=profkat
 
-MCR.WorkflowEngine.Administrator.Email=pkadmin@beispiel-uni.de
-MCR.WorkflowEngine.professorum.admin=pkadmin@beispiel-uni.de
-MCR.WorkflowEngine.professorum.from=pkadmin@beispiel-uni.de
-MCR.WorkflowEngine.professorum.replyto=pkadmin@beispiel-uni.de
+MCR.Workflow.Email.MailServerHost=
+MCR.Workflow.Email.MailServerPort=
+MCR.Workflow.Email.MailServerUseSSL=
+MCR.Workflow.Email.MailServerUseTLS=
+MCR.Workflow.Email.MailServerUsername=
+MCR.Workflow.Email.MailServerPassword=
+MCR.Workflow.Email.Sender=
+MCR.Workflow.Email.From=
+MCR.Workflow.Email.CC=
+#MCRWorkflow.Email.Feedback.Recipient=
+MCRWorkflow.Email.Feedback.Recipient=
+MCRWorkflow.Email.Feedback.Subject=
