--- a/profkat-sample-webapp/build.xml
+++ b/profkat-sample-webapp/build.xml
@@ -65,7 +65,7 @@
 	
 	<target name="create.class" depends="init" >
 		<java fork="true" dir="${HOME}" jar="${HOME}/${APP_NAME}-cli.jar">
-			<arg value="update all classifications from directory C:\workspaces\cpr\projects\profkat-sample-webapp/content/classification" />
+			<arg value="update all classifications from directory ${CONTENT_DIR}/classification" />
 		</java>
 	<!--
 		<taskdef name="mcr-execute" classname="org.mycore.buildtools.anttasks.MCRExecuteCommandTask" classpathref="APP_CLASSPATH" />
