--- a/profkat-base-module/pom.xml
+++ b/profkat-base-module/pom.xml
@@ -192,6 +192,7 @@
 				<artifactId>xml-maven-plugin</artifactId>
 				<executions>
 					<execution>
+						<phase>compile</phase>
 						<goals>
 							<goal>transform</goal>
 						</goals>
