display derivate files in workflow
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31301 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -113,7 +113,9 @@ MCR.URIResolver.xslImports.solr-document=%MCR.URIResolver.xslImports.solr-docume
 MCR.Activiti.TaskAssignment.CandidateGroups.create_object_simple.profkat_person=editprofessorum
 MCR.Activiti.TaskAssignment.CandidateUsers.edit_object.profkat_person=administrator
 MCR.Activiti.WorkflowMgr.Class.create_object_simple.default_person=org.mycore.activiti.workflows.create_object_simple.person.MCRWorkflowMgrPerson
+
 MCR.Activiti.MCRObject.Display.Title.XPath.profkat_person=concat(//metadata/box.surname/surname[1],', ',//metadata/box.firstname/firstname[1])
+MCR.Activiti.MCRObject.Display.Description.XPath.profkat_person=concat('<p>',//metadata/box.academictitle/academictitle,'</p><p> * ',//metadata/box.birth/birth/text,'&#160;&#160;&#160; &#10013; ',//metadata/box.death/death/text, '</p>')
 
 
 ##############################################################################
