--- a/profkat-sample-webapp/build.xml
+++ b/profkat-sample-webapp/build.xml
@@ -8,9 +8,9 @@
 	<property name="HOME" value="${basedir}/target/app" />
 	<property name="CONTENT_DIR" value="${basedir}/content" />
 	
-	<property name="SOLR_DEFAULT_CONFIG_URL" value="http://artifactory.mycore.de/libs-snapshots-local/org/mycore/solr/solr-home/4.8.1-SNAPSHOT/solr-home-4.8.1-20141014.165252-1.zip" />
+	<property name="SOLR_DEFAULT_CONFIG_URL" value="http://artifactory.mycore.de/libs-snapshots-local/org/mycore/solr/solr-home/4.8.1-SNAPSHOT/solr-home-4.8.1-20141031.092947-2.zip" />
 	<property name="SOLR_CORE_ID" value="profkat" />
-	<condition property="SOLR_HOME_DIR" value="/opt/solr" else="c:\workspaces\profkat\data\solr-home">
+	<condition property="SOLR_HOME_DIR" value="/opt/solr" else="c:\workspaces\profkat\solr\data">
 		<os family="unix" />
 	</condition>
 	<condition property="SOLR_CONF_DIR" value="/opt/profkat/projects/profkat-sample-webapp/solr-conf" else="C:\workspaces\profkat\projects\profkat-sample-webapp\solr-conf">
