ongoing search reimplementation
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@32488 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/src/main/config/mycore.properties
+++ b/profkat-sample-webapp/src/main/config/mycore.properties
@@ -12,7 +12,7 @@
 ## windows defaults
 MCR.datadir=C:/workspaces/profkat/data
 MCR.basedir=C:/workspaces/profkat/projects/profkat-sample-webapp/target/app/profkat-sample
-MCR.baseurl=http://localhost:8080/profkat-sample-webapp/
+MCR.baseurl=http://localhost:8080/profkat/
 MCR.Module-solr.ServerURL=http://localhost:8980/solr/profkat
 log4j.rootLogger=INFO, stdout, R
 log4j.logger.org.mycore.common.xml.MCRLayoutService=ERROR, stdout, R
