--- a/profkat-sample-webapp/pom.xml
+++ b/profkat-sample-webapp/pom.xml
@@ -7,245 +7,249 @@
   <description>Sample of a professorenkatalog</description>
   <version>2015.05.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<hibernate.version>4.3.4.Final</hibernate.version>
-		<mcr.finalName>profkat-sample</mcr.finalName>
-	</properties>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>MyCoRe HQ</id>
-			<url>http://artifactory.mycore.de/mycore-releases</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</pluginRepository>
-		<pluginRepository>
-			<id>MyCoRe HQ Snapshots</id>
-			<url>http://artifactory.mycore.de/mycore-snapshots</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
-	<repositories>
-		<repository>
-			<id>MyCoRe HQ</id>
-			<url>http://artifactory.mycore.de/mycore-releases</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>MyCoRe HQ Snapshots</id>
-			<url>http://artifactory.mycore.de/mycore-snapshots</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
 
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<type>jar</type>
-			<scope>test</scope>
-			<optional>false</optional>
-		</dependency>
-		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.1-901.jdbc4</version>
-		</dependency>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <hibernate.version>4.3.4.Final</hibernate.version>
+    <mcr.finalName>profkat-sample</mcr.finalName>
+  </properties>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>MyCoRe HQ</id>
+      <url>http://artifactory.mycore.de/mycore-releases</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>MyCoRe HQ Snapshots</id>
+      <url>http://artifactory.mycore.de/mycore-snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
+  <repositories>
+    <repository>
+      <id>MyCoRe HQ</id>
+      <url>http://artifactory.mycore.de/mycore-releases</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>MyCoRe HQ Snapshots</id>
+      <url>http://artifactory.mycore.de/mycore-snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
-		<dependency>
-			<groupId>org.mycore</groupId>
-			<artifactId>profkat-base-module</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <type>jar</type>
+      <scope>test</scope>
+      <optional>false</optional>
+    </dependency>
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.1-901.jdbc4</version>
+    </dependency>
 
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>2.2</version>
-			<type>jar</type>
-			<scope>provided</scope>
-			<optional>false</optional>
-		</dependency>
-		<dependency>
-			<groupId>xalan</groupId>
-			<artifactId>xalan</artifactId>
-			<version>2.7.2</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>xerces</groupId>
-			<artifactId>xercesImpl</artifactId>
-			<version>2.11.0</version>
-			<scope>runtime</scope>
-</dependency>
-		
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>javax.servlet</groupId>
-									<artifactId>javax.servlet-api</artifactId>
-									<version>3.0.1</version>
-									<type>jar</type>
-									<overWrite>true</overWrite>
-								</artifactItem>
-							</artifactItems>
-							<outputDirectory>${project.build.directory}/app/lib</outputDirectory>
-							<stripVersion>true</stripVersion>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+    <dependency>
+      <groupId>org.mycore</groupId>
+      <artifactId>profkat-base-module</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.1-beta-1</version>
-				<configuration>
-					<archiveClasses>true</archiveClasses>
-					<webResources>
-						<resource>
-							<directory>src/main/resources</directory>
-							<targetPath>WEB-INF/classes</targetPath>
-						</resource>
-						<resource>
-							<directory>src/main/config</directory>
-							<targetPath>WEB-INF/classes</targetPath>
-							<includes>
-								<include>*.*</include>
-							</includes>
-							<excludes>
-								<exclude>web.xml</exclude>
-								<exclude>*.template</exclude>
-								<exclude>datamodel-*.xml</exclude>
-							</excludes>
-						</resource>
-						<resource>
-							<directory>src/main/config/lang</directory>
-							<targetPath>WEB-INF/classes</targetPath>
-							<includes>
-								<include>*.*</include>
-							</includes>
-							<excludes>
-								<exclude>*.template</exclude>
-							</excludes>
-						</resource>
-						<resource>
-							<directory>src/main/config/hibernate</directory>
-							<targetPath>WEB-INF/classes</targetPath>
-							<excludes>
-								<exclude>*.template</exclude>
-							</excludes>
-						</resource>
-						<resource>
-							<directory>src/main/config</directory>
-							<targetPath>WEB-INF</targetPath>
-							<includes>
-								<include>web.xml</include>
-							</includes>
-						</resource>
-					</webResources>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.5</version>
-				<executions>
-					<execution>
-						<phase>install</phase>
-						<configuration>
-							<target>
-								<unzip
-									src="${project.build.directory}/${project.build.finalName}.war"
-									dest="${project.build.directory}/app/${mcr.finalName}">
-								</unzip>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>jsp-api</artifactId>
+      <version>2.2</version>
+      <type>jar</type>
+      <scope>provided</scope>
+      <optional>false</optional>
+    </dependency>
+    <dependency>
+      <groupId>xalan</groupId>
+      <artifactId>xalan</artifactId>
+      <version>2.7.2</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.11.0</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+      <version>3.3.5</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
+      <version>1.11.3</version>
+      <scope>runtime</scope>
+    </dependency>
+
+  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-dependencies</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>javax.servlet</groupId>
+                  <artifactId>javax.servlet-api</artifactId>
+                  <version>3.0.1</version>
+                  <type>jar</type>
+                  <overWrite>true</overWrite>
+                </artifactItem>
+              </artifactItems>
+              <outputDirectory>${project.build.directory}/app/lib</outputDirectory>
+              <stripVersion>true</stripVersion>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.1-beta-1</version>
+        <configuration>
+          <archiveClasses>true</archiveClasses>
+          <webResources>
+            <resource>
+              <directory>src/main/resources</directory>
+              <targetPath>WEB-INF/classes</targetPath>
+            </resource>
+            <resource>
+              <directory>src/main/config</directory>
+              <targetPath>WEB-INF/classes</targetPath>
+              <includes>
+                <include>*.*</include>
+              </includes>
+              <excludes>
+                <exclude>web.xml</exclude>
+                <exclude>*.template</exclude>
+                <exclude>datamodel-*.xml</exclude>
+              </excludes>
+            </resource>
+            <resource>
+              <directory>src/main/config/lang</directory>
+              <targetPath>WEB-INF/classes</targetPath>
+              <includes>
+                <include>*.*</include>
+              </includes>
+              <excludes>
+                <exclude>*.template</exclude>
+              </excludes>
+            </resource>
+            <resource>
+              <directory>src/main/config/hibernate</directory>
+              <targetPath>WEB-INF/classes</targetPath>
+              <excludes>
+                <exclude>*.template</exclude>
+              </excludes>
+            </resource>
+            <resource>
+              <directory>src/main/config</directory>
+              <targetPath>WEB-INF</targetPath>
+              <includes>
+                <include>web.xml</include>
+              </includes>
+            </resource>
+          </webResources>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+          <execution>
+            <phase>install</phase>
+            <configuration>
+              <target>
+                <unzip src="${project.build.directory}/${project.build.finalName}.war" dest="${project.build.directory}/app/${mcr.finalName}">
+                </unzip>
 
 								<!-- create CLI jar -->
-								<property name="build.compiler" value="extJavac" />
+                <property name="build.compiler" value="extJavac" />
 
-								<path id="class-path">
-									<fileset dir="${project.build.directory}/app">
-										<include name="${mcr.finalName}/WEB-INF/lib/*.jar" />
-									</fileset>
-								</path>
-								<mkdir dir="${project.build.directory}/classes" />
-								<copy todir="${project.build.directory}/classes">
-									<fileset
-										dir="${project.build.directory}/app/${mcr.finalName}/WEB-INF/classes" />
-								</copy>
+                <path id="class-path">
+                  <fileset dir="${project.build.directory}/app">
+                    <include name="${mcr.finalName}/WEB-INF/lib/*.jar" />
+                  </fileset>
+                </path>
+                <mkdir dir="${project.build.directory}/classes" />
+                <copy todir="${project.build.directory}/classes">
+                  <fileset dir="${project.build.directory}/app/${mcr.finalName}/WEB-INF/classes" />
+                </copy>
 
-								<pathconvert property="cpProp" dirsep="/" pathsep=" "
-									refid="class-path">
-									<map
-										from="${project.build.directory}/app/${mcr.finalName}"
-										to="${mcr.finalName}" />
-								</pathconvert>
+                <pathconvert property="cpProp" dirsep="/" pathsep=" " refid="class-path">
+                  <map from="${project.build.directory}/app/${mcr.finalName}" to="${mcr.finalName}" />
+                </pathconvert>
 
-								<manifest file="${project.build.directory}/MANIFEST.MF">
-									<attribute name="Main-Class"
-										value="org.mycore.frontend.cli.MCRCommandLineInterface" />
-									<attribute name="Class-Path" value="${cpProp} lib/javax.servlet-api.jar" />
-								</manifest>
-								<jar
-									jarfile="${project.build.directory}/app/${mcr.finalName}-cli.jar"
-									basedir="${project.build.directory}/classes" manifest="${project.build.directory}/MANIFEST.MF" />
+                <manifest file="${project.build.directory}/MANIFEST.MF">
+                  <attribute name="Main-Class" value="org.mycore.frontend.cli.MCRCommandLineInterface" />
+                  <attribute name="Class-Path" value="${cpProp} lib/javax.servlet-api.jar" />
+                </manifest>
+                <jar jarfile="${project.build.directory}/app/${mcr.finalName}-cli.jar" basedir="${project.build.directory}/classes"
+                  manifest="${project.build.directory}/MANIFEST.MF" />
 
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.ant</groupId>
-						<artifactId>ant</artifactId>
-						<version>1.8.0</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-		</plugins>
-	</build>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>1.8.0</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
+  </build>
 </project>
