added searchfield definitions and mappings (migration from searchfields.xml to SOLR)
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@32911 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -15,9 +15,9 @@ MCR.Searcher.lucene-metadata.Index=metadata
 ##########################################
 # Index Browser 
 ##########################################
-MCR.IndexBrowser.profkat.Searchfield=profkat_idx_headline
-MCR.IndexBrowser.profkat.Labelfield=profkat_idx_headline
-MCR.IndexBrowser.profkat.Datafields=profkat_period,profkat_last_professorship,profkat_last_faculty_class,profkat_state_msg
+MCR.IndexBrowser.profkat.Searchfield=profkat.idx_headline
+MCR.IndexBrowser.profkat.Labelfield=profkat.idx_headline
+MCR.IndexBrowser.profkat.Datafields=profkat.period,profkat.last_professorship,profkat.last_faculty_class,profkat.state_msg
 
 ##########################################
 # OAI Data Provider
