--- a/profkat-sample-webapp/src/main/config/mycore.properties
+++ b/profkat-sample-webapp/src/main/config/mycore.properties
@@ -36,6 +36,17 @@ MCR.Workflow.Email.MailServerPassword=
 MCR.Workflow.Email.Sender=
 MCR.Workflow.Email.From=
 MCR.Workflow.Email.CC=
-#MCRWorkflow.Email.Feedback.Recipient=
 MCRWorkflow.Email.Feedback.Recipient=
 MCRWorkflow.Email.Feedback.Subject=
+
+#PND Beacon
+MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.TARGET=http://profkat.meine-einrichtung.de/gnd/{ID}
+MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.FEED=http://profkat.meine-einrichtung.de/profkat_pnd_beacon.txt
+MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.NAME=Beispiel Professorenkatalog
+MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.DESCRIPTION=Beispielanwendung für einen Professorenkatalog (im Aufbau).
+MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.CONTACT=AG Professorenkatalog <profkat@meine-einrichtung.de>
+MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.INSTITUTION=AG Professorenkatalog, Universität Musterstadt
+#MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.ISIL=DE-xx
+MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.MESSAGE=Eintrag im Beispielprofessorenkatalog
+MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.UPDATE=always
+MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.REVISIT_days=7
