PND Beacon - frontend reworked resolving on docdetails page is now asynchron (via jQuery / AJAX)
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@32920 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/src/main/config/mycore.properties
+++ b/profkat-sample-webapp/src/main/config/mycore.properties
@@ -40,13 +40,13 @@ MCRWorkflow.Email.Feedback.Recipient=
 MCRWorkflow.Email.Feedback.Subject=
 
 #PND Beacon
-MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.TARGET=http://profkat.meine-einrichtung.de/gnd/{ID}
-MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.FEED=http://profkat.meine-einrichtung.de/profkat_pnd_beacon.txt
-MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.NAME=Beispiel Professorenkatalog
-MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.DESCRIPTION=Beispielanwendung für einen Professorenkatalog (im Aufbau).
-MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.CONTACT=AG Professorenkatalog <profkat@meine-einrichtung.de>
-MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.INSTITUTION=AG Professorenkatalog, Universität Musterstadt
-#MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.ISIL=DE-xx
-MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.MESSAGE=Eintrag im Beispielprofessorenkatalog
-MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.UPDATE=always
-MCR.Profkat.Beacon.ProfKatPNDBeaconServlet.REVISIT_days=7
+MCR.Profkat.Beacon.ProfKatBeaconTxtServlet.TARGET=http://profkat.meine-einrichtung.de/gnd/{ID}
+MCR.Profkat.Beacon.ProfKatBeaconTxtServlet.FEED=http://profkat.meine-einrichtung.de/profkat_pnd_beacon.txt
+MCR.Profkat.Beacon.ProfKatBeaconTxtServlet.NAME=Beispiel Professorenkatalog
+MCR.Profkat.Beacon.ProfKatBeaconTxtServlet.DESCRIPTION=Beispielanwendung für einen Professorenkatalog (im Aufbau).
+MCR.Profkat.Beacon.ProfKatBeaconTxtServlet.CONTACT=AG Professorenkatalog <profkat@meine-einrichtung.de>
+MCR.Profkat.Beacon.ProfKatBeaconTxtServlet.INSTITUTION=AG Professorenkatalog, Universität Musterstadt
+#MCR.Profkat.Beacon.ProfKatBeaconTxtServlet.ISIL=DE-xx
+MCR.Profkat.Beacon.ProfKatBeaconTxtServlet.MESSAGE=Eintrag im Beispielprofessorenkatalog
+MCR.Profkat.Beacon.ProfKatBeaconTxtServlet.UPDATE=always
+MCR.Profkat.Beacon.ProfKatBeaconTxtServlet.REVISIT_days=7
