display lifetime data in indexbrowser
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@32952 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -17,7 +17,7 @@ MCR.Searcher.lucene-metadata.Index=metadata
 ##########################################
 MCR.IndexBrowser.profkat.Searchfield=profkat.idx_headline
 MCR.IndexBrowser.profkat.Labelfield=profkat.idx_headline
-MCR.IndexBrowser.profkat.Datafields=profkat.period,profkat.last_professorship,profkat.last_faculty_class,profkat.state_msg
+MCR.IndexBrowser.profkat.Datafields=profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty_class,profkat.state_msg
 
 ##########################################
 # OAI Data Provider
