derivate tag: display_image > display_portrait | display_signature
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@32964 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -2,6 +2,7 @@
 MCR.CLI.Classes.Internal=org.mycore.user2.MCRUserCommands,org.mycore.frontend.cli.MCRClassification2Commands,org.mycore.frontend.cli.MCRObjectCommands,org.mycore.frontend.cli.MCRAccessCommands,org.mycore.frontend.cli.MCRDerivateCommands,org.mycore.backend.hibernate.MCRHIBCtrlCommands,org.mycore.access.mcrimpl.MCRAccessCtrlCommands
 
 MCR.Searcher.lucene-metadata.Index=metadata
+MCR.Module-iview2.LocalTiler.activated=false
 
 ## SOLR search configuration
 #MCR.Searcher.lucene-metadata.Index=
@@ -22,6 +23,7 @@ MCR.IndexBrowser.profkat.Datafields=profkat.lifetime,profkat.period,profkat.last
 ##########################################
 # OAI Data Provider
 ##########################################
+
 MCR.OAIDataProvider.OAI2.Search.Restriction=objectType:person
 MCR.OAIDataProvider.OAI2.Sets.bkl=xslStyle:classification2sets:classification:metadata:1:children:profkat_class_subjects
 MCR.OAIDataProvider.OAI2.MapSetToClassification.bkl=profkat_class_subjects
