fix indexbrowser configuration
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@32980 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -1,9 +1,6 @@
 ##### Application specific properties
 MCR.CLI.Classes.Internal=org.mycore.user2.MCRUserCommands,org.mycore.frontend.cli.MCRClassification2Commands,org.mycore.frontend.cli.MCRObjectCommands,org.mycore.frontend.cli.MCRAccessCommands,org.mycore.frontend.cli.MCRDerivateCommands,org.mycore.backend.hibernate.MCRHIBCtrlCommands,org.mycore.access.mcrimpl.MCRAccessCtrlCommands
 
-MCR.Searcher.lucene-metadata.Index=metadata
-MCR.Module-iview2.LocalTiler.activated=false
-
 ## SOLR search configuration
 #MCR.Searcher.lucene-metadata.Index=
 #MCR.Searcher.solr-metadata.Index=metadata
@@ -16,9 +13,10 @@ MCR.Module-iview2.LocalTiler.activated=false
 ##########################################
 # Index Browser 
 ##########################################
-MCR.IndexBrowser.profkat.Searchfield=profkat.idx_headline
-MCR.IndexBrowser.profkat.Labelfield=profkat.idx_headline
-MCR.IndexBrowser.profkat.Datafields=profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty_class,profkat.state_msg
+MCR.IndexBrowser.profname.Searchfield=profkat.idx_profname.headline
+MCR.IndexBrowser.profname.Headerfield=profkat.idx_profname.headline
+MCR.IndexBrowser.profname.Facetfield=profkat.idx_profname.facet
+MCR.IndexBrowser.profname.Datafields=profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty_class,profkat.state_msg
 
 ##########################################
 # OAI Data Provider
