updated classification browsser (property based configuration)
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33007 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -18,6 +18,38 @@ MCR.IndexBrowser.profname.Headerfield=profkat.idx_profname.headline
 MCR.IndexBrowser.profname.Facetfield=profkat.idx_profname.facet
 MCR.IndexBrowser.profname.Datafields=profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty_class,profkat.state_msg
 
+
+##########################################
+# Classifications Browser 
+##########################################
+MCR.ClassBrowser.institution.Classification=profkat_class_institutions
+MCR.ClassBrowser.institution.Count=true
+MCR.ClassBrowser.institution.HideEmptyLeaves=true
+MCR.ClassBrowser.institution.Expand=false
+MCR.ClassBrowser.institution.Filter=objectType:person
+MCR.ClassBrowser.institution.ShowUri=false
+MCR.ClassBrowser.institution.ShowDescription=true
+MCR.ClassBrowser.institution.ShowId=false
+
+MCR.ClassBrowser.subject.Classification=profkat_class_subjects
+MCR.ClassBrowser.subject.Count=true
+MCR.ClassBrowser.subject.HideEmptyLeaves=true
+MCR.ClassBrowser.subject.Expand=false
+MCR.ClassBrowser.subject.Filter=objectType:person
+MCR.ClassBrowser.subject.ShowDescription=true
+MCR.ClassBrowser.subject.ShowUri=false
+MCR.ClassBrowser.subject.ShowId=false
+
+MCR.ClassBrowser.epoch.Classification=profkat_class_epochs
+MCR.ClassBrowser.epoch.Count=true
+MCR.ClassBrowser.epoch.HideEmptyLeaves=true
+MCR.ClassBrowser.epoch.Expand=true
+MCR.ClassBrowser.epoch.Filter=objectType:person
+MCR.ClassBrowser.epoch.ShowDescription=true
+MCR.ClassBrowser.epoch.ShowUri=false
+MCR.ClassBrowser.epoch.ShowId=false
+
+			
 ##########################################
 # OAI Data Provider
 ##########################################
