start rewrite of frontend for search and indexbrowsing
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33029 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -11,12 +11,18 @@ MCR.CLI.Classes.Internal=org.mycore.user2.MCRUserCommands,org.mycore.frontend.cl
 
 
 ##########################################
+# Search Result 
+##########################################
+MCR.SearchResult.person.Headerfield=profkat.idx_profname.headline
+MCR.SearchResult.person.Datafields=profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty_class,profkat.state_msg
+MCR.SearchResult.person.DefaultCoverfield=profkat.sex
+
+
+##########################################
 # Index Browser 
 ##########################################
 MCR.IndexBrowser.profname.Searchfield=profkat.idx_profname.headline
-MCR.IndexBrowser.profname.Headerfield=profkat.idx_profname.headline
 MCR.IndexBrowser.profname.Facetfield=profkat.idx_profname.facet
-MCR.IndexBrowser.profname.Datafields=profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty_class,profkat.state_msg
 
 
 ##########################################
@@ -75,12 +81,6 @@ MCR.URIResolver.Classification.Sort.profkat_class_adminfunctions=false
 MCR.URIResolver.Classification.Sort.profkat_class_degree=false
 MCR.URIResolver.Classification.Sort.profkat_class_professortypes=false
 MCR.URIResolver.Classification.Sort.profkat_class_institutions=false
-
-MCR.Class.SearchField.profkat_class_subjects=class_bkl
-MCR.Class.SearchField.profkat_class_adminfunctions=class_admin
-#MCR.Class.SearchField.profkat_class_degree=cpr_degree #if disabled no search-link in detailview will be displayed
-MCR.Class.SearchField.profkat_class_professortypes=class_proftypes
-MCR.Class.SearchField.profkat_class_institutions=class_fac
 
 MCR.WorkflowEngine.Administrator.Email=profkatadmin@beispiel-uni.de
 MCR.WorkflowEngine.EditDirectory.person=%MCR.datadir%/export/person
