ant ant script to create config directory
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33680 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/build.xml
+++ b/profkat-sample-webapp/build.xml
@@ -81,6 +81,13 @@
 		</java>
 	</target>
 
+	<target name="createa.configuration.directory" >
+		<java fork="true" dir="${HOME}" jar="${HOME}/${APP_NAME}-cli.jar">
+			<arg value="create configuration directory" />
+		</java>
+	</target>
+	
+	
 	<target name="update.solr.config">
 		<mkdir  dir="${SOLR_HOME_DIR}" />
 		<get src="${SOLR_DEFAULT_CONFIG_URL}" dest="${SOLR_HOME_DIR}/solr-default-config.zip" />
