cleanup pom.xml
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33744 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/pom.xml
+++ b/profkat-sample-webapp/pom.xml
@@ -202,10 +202,8 @@
             <phase>install</phase>
             <configuration>
               <target>
-                <unzip src="${project.build.directory}/${project.build.finalName}.war" dest="${project.build.directory}/app/${mcr.finalName}">
-                </unzip>
-
-								<!-- create CLI jar -->
+                <unzip src="${project.build.directory}/${project.build.finalName}.war" dest="${project.build.directory}/app/${mcr.finalName}" />
+               	<!-- create CLI jar -->
                 <property name="build.compiler" value="extJavac" />
 
                 <path id="class-path">
