navigation + web.xml moved
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33749 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/src/main/resources/config/web.xml
+++ b/profkat-sample-webapp/src/main/resources/config/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
 
-	<display-name>Beispiel Professorenkatalog</display-name>
+	<display-name>profkat-sample</display-name>
 	<description>Beispiel für einen Professorenkatalog</description>
 
 	<servlet id="ProfKatBeaconTxtServlet">
